# indieshout

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/skills/: publish.md  sns.md
blog-content/: README.md
blog-content/00001-My AI Employee Caught What Antivirus Couldn't/: content.md  meta.md
blog-content/00001-test-post/: content.md  meta.md
config/: config.example.yaml
docs/: api-guide.md  architecture.md  blog-strategy.md  plan.md  prerequisites.md  references.md
src/indieshout/: __init__.py  main.py
src/indieshout/blog/: __init__.py  base.py  content_loader.py  hugo_publisher.py
src/indieshout/formatter/: content_formatter.py
src/indieshout/models/: content.py
src/indieshout/publishers/: __init__.py  base.py  threads.py  twitter.py
src/indieshout/utils/: config.py  logger.py  s3_uploader.py  translator.py
src/indieshout/workflows/: __init__.py  publish_workflow.py
tests/: conftest.py  test_cli.py  test_config.py  test_content_loader.py  test_formatter.py  test_hugo_publisher.py  test_models.py  test_publishers_base.py  test_s3_uploader.py  test_threads_publisher.py  test_twitter_publisher.py
