[project]
name = "indieshout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rocosrex", email = "rocos.rex@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
indieshout = "indieshout:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
